--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,12 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+  packages: write
+  issues: read
+  pull-requests: read
+
 env:
   DOTNET_VERSION: '9.0.x'
   SOLUTION_FILE: 'AQ.sln'
@@ -127,12 +133,10 @@ jobs:
         done
     
     - name: Create GitHub Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: v${{ needs.validate-release.outputs.version }}
-        release_name: Release v${{ needs.validate-release.outputs.version }}
+        name: Release v${{ needs.validate-release.outputs.version }}
         body: |
           ## Release Notes for v${{ needs.validate-release.outputs.version }}
           
@@ -151,31 +155,3 @@ jobs:
           ```
         draft: false
         prerelease: ${{ needs.validate-release.outputs.is-prerelease == 'true' }}
-
-  publish-github-packages:
-    name: Publish to GitHub Packages
-    runs-on: ubuntu-latest
-    needs: [validate-release, build-and-package]
-    if: always() && needs.build-and-package.result == 'success'
-    
-    steps:
-    - name: Download package artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: nuget-packages
-        path: ./packages
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-    
-    - name: Add GitHub Package Registry source
-      run: dotnet nuget add source --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
-    
-    - name: Publish to GitHub Packages
-      run: |
-        for package in ./packages/*.nupkg; do
-          echo "Publishing $package to GitHub Packages"
-          dotnet nuget push "$package" --source github --skip-duplicate
-        done
