refactor: Remove unnecessary parameters from StateMachineDefinition constructors and update CreateNewVersion method

--- a/src/ValueObjects/AQ.ValueObjects.csproj
+++ b/src/ValueObjects/AQ.ValueObjects.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Markdig"  PrivateAssets="All"/>
-    <PackageReference Include="HtmlSanitizer"  PrivateAssets="All"/>
+    <PackageReference Include="Markdig"  />
+    <PackageReference Include="HtmlSanitizer"  />
   </ItemGroup>
 </Project>
