feat: implement batch processing support in DataSeedingService; add IBatchDataSeeder interface and SeederProgress record for progress tracking

--- a/src/DataSeeding/AQ.DataSeeding.csproj
+++ b/src/DataSeeding/AQ.DataSeeding.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Results\AQ.Utilities.Results.csproj" />
+  </ItemGroup>
+
 </Project>
