feat: add searchable attributes to StateMachine entities and update project references

--- a/src/StateMachine/Entities/AQ.StateMachine.Entities.csproj
+++ b/src/StateMachine/Entities/AQ.StateMachine.Entities.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Entities\AQ.Entities.csproj" />
+    <ProjectReference Include="..\..\Utilities\Search\AQ.Utilities.Search.csproj" />
   </ItemGroup>
 
 </Project>
